--- a/main.css
+++ b/main.css
@@ -7,11 +7,70 @@ article{
   width:100%;
   float: left;
 }
+
+.buttons-container{
+  position: relative;
+  width: 100%;
+  height: 203px;
+}
+
 .button{
   width:50%;
-  height: 400px;
+  height: 100px;
   float: left;
   background: red;
+
+  
+
+  border: 1px solid rgb(50,0,0);
+
+  position: absolute;
+}
+
+.button.button-green{
+  border-top-left-radius:15%;
+  box-shadow: 0px 9px 0px rgb(50,0,0);
+
+
+}
+
+.button.button-yellow{
+  border-top-right-radius:15%;
+  box-shadow: 0px 9px 0px rgb(50,0,0);
+  right:0;
+}
+
+.button.button-red{
+  border-bottom-left-radius:15%;
+  box-shadow: 0px 9px 0px rgb(50,0,0);
+  bottom:0;
+}
+
+.button.button-blue{
+  border-bottom-right-radius:15%;
+  box-shadow: 0px 9px 0px rgb(50,0,0);
+  bottom:0;
+  right:0;
+}
+
+.button.button-green:active{
+  top:4px;
+  box-shadow: 0px 5px 0px rgb(50,0,0);
+}
+
+.button.button-yellow:active{
+  top:4px;
+  box-shadow: 0px 5px 0px rgb(50,0,0);
+}
+
+.button.button-red:active{
+  bottom:-4px;
+  box-shadow: 0px 5px 0px rgb(50,0,0);
+}
+
+.button.button-blue:active{
+  bottom:-4px;
+  box-shadow: 0px 5px 0px rgb(50,0,0);
 }
 
 .button-mini{
@@ -50,9 +109,12 @@ article{
 #score{
   background-color: black;
   width:30%;
-  height: 300px;
+  height: 50px;
   color:white;
   position: absolute;
-  top:30%;
-  left:30%;
+  top:38%;
+  left:33%;
+  border-radius: 30%;
+  text-align:center;
+  box-shadow: 0px -5px 0px rgb(50,50,50);
 }
