--- a/css/main.less
+++ b/css/main.less
@@ -1,17 +1,17 @@
-
 body{
   font-size: 3em;
-  
 }
+
 article{
-  position: relative;
-  width:100%;
-  float: left;
+  width:90%;
+  float:left;
+  margin:0 5%;
 }
 
 .buttons-container{
   position: relative;
   width: 100%;
+  float: left;
   height: 203px;
 
   .button{
