#4 wrong move effect

--- a/css/main.less
+++ b/css/main.less
@@ -8,10 +8,13 @@ article{
   margin:0 5%;
 }
 
-.buttons-container{
-  position: relative;
+section{
   width: 100%;
-  float: left;
+  float:left;
+}
+
+section.buttons-container{
+  position: relative;
   height: 203px;
 
   .button{
@@ -43,8 +46,30 @@ article{
     right:0;
     z-index: 1;
   }
+}
 
+section.repeat-buttons{
+  margin-top: 20px;
 
+  .btn-repeat{
+    width: 30%;
+    float: left;
+  }
+  .btn-repeat-missing{
+    width: 65%;
+    margin-left: 5%;
+    float: left;
+
+  }
+}
+
+section.breadcrumb{
+  margin-top: 20px;
+
+  .btn{
+    float:left;
+    margin:0 1%
+  }
 }
 
 
