--- a/css/main.less
+++ b/css/main.less
@@ -68,7 +68,12 @@ section.breadcrumb{
 
   .btn{
     float:left;
-    margin:0 1%
+    margin:0 1%;
+    border-width: thin;
+  }
+
+  .gray{
+    background-color: gray !important;
   }
 }
 
