#6 formatting to phonegap folder structure

--- a/css/main.less
+++ b/css/main.less
@@ -84,7 +84,7 @@ section.repeat-buttons{
   margin-top: 20px;
 
   .btn-repeat{
-    width: 30%;
+    /*width: 30%;*/
     float: left;
   }
   .btn-repeat-missing{
